Fixed bug where too much content broke formatting

--- a/assets/stylesheets/quote.css
+++ b/assets/stylesheets/quote.css
@@ -37,6 +37,7 @@ body{
   margin: 0;
   padding: 0;
   border: 0;
+  max-width: 87%;
 }
 
 .avatar img{
